--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -13,7 +13,7 @@
 <nav class="headerbar">
     <div class="header_logo">
         <i class="fab fa-accusoft"></i>
-        <a href="/">Portpolio</a>
+        <a href="/">Portfolio</a>
     </div>
     <ul class="header_menu">
         <li><a href="/insert">메뉴 넣기</a></li>
